--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 </head>
 
-<body class="dark">
+<body class="">
     <div class="container">
 
         <img class="avatar" src="https://github.com/vinizbjj.png" alt="Image do Vini" />
@@ -22,21 +22,21 @@
 
         <ul>
             <li>
-                <a href="https://github.com/vinizbjj" target="_blank">Github</a>
+                <a href="https://github.com/vinizbjj" target="_blank">🐱Github</a>
             </li>
             <li>
-                <a href="https://www.instagram.com/viniz.bjj/" target="_blank">Insta</a>
+                <a href="https://www.instagram.com/viniz.bjj/" target="_blank">📷Instagram</a>
             </li>
             <li>
-                <a href="https://www.linkedin.com/in/viniz/" target="_blank">Linkedin</a>
+                <a href="https://www.linkedin.com/in/viniz/" target="_blank">🏢Linkedin</a>
             </li>
 
             <li>
-                <a href="https://www.youtube.com/channel/UC8ilK0GDwL888J9Q_STiWuw" target="_blank">Youtube</a>
+                <a href="https://www.youtube.com/channel/UC8ilK0GDwL888J9Q_STiWuw" target="_blank">📹Youtube</a>
             </li>
         </ul>
 
-        <footer>Feito com pela <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a>
+        <footer>Feito com ♥ pela <a href="https://www.rocketseat.com.br/" target="_blank">Rocketseat</a>
         </footer>
 
     </div>
