--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         rel="stylesheet">
 </head>
 
-<body class="">
+<body class="dark">
     <div class="container">
 
         <img class="avatar" src="https://github.com/vinizbjj.png" alt="Image do Vini" />
